package org.rhasspy.mobile.viewmodel.navigation.destinations

import org.rhasspy.mobile.viewmodel.navigation.NavigationDestination

enum class MainNavigationDestination : NavigationDestination {

    HomeScreen,
    ConfigurationScreen,
    SettingsScreen,
    LogScreen

}