...
            viewState = viewState.rhasspy3Wyoming,
            onEvent = onEvent
        )

        CustomDivider()

        HomeAssistant(
            viewState = viewState.homeAssistant,
            onEvent = onEvent
        )

        CustomDivider()

...
